[INTERNAL][FIX] StandardListItem: focus outline not fully visible for avatar
BCP: 2370008101

--- a/src/sap.m/src/sap/m/themes/base/StandardListItem.less
+++ b/src/sap.m/src/sap/m/themes/base/StandardListItem.less
@@ -270,6 +270,7 @@ html[dir=rtl] .sapMSLIInfo {
 }
 
 .sapMSLIAvatar {
+	margin: 0.125rem;
 	margin-right: 0.75rem;
 }
 
